src/script/parse/msgennyparser.js
define ([], function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { program: peg$parseprogram },
        peg$startRuleFunction  = peg$parseprogram,

        peg$c0 = function(pre, d) {
            d[1] = extractUndeclaredEntities(d[1], d[2]);
            var lRetval = merge (d[0], merge (d[1], d[2]));

            lRetval = merge ({meta: getMetaInfo(d[0], d[2])}, lRetval);
            
            if (pre.length > 0) {
                lRetval = merge({precomment: pre}, lRetval);
            }
        /*
            if (post.length > 0) {
                lRetval = merge(lRetval, {postcomment:post});
            }
        */
            return lRetval;
        },
        peg$c1 = function(o) {return {options:o}},
        peg$c2 = function(e) {return {entities:e}},
        peg$c3 = function(a) {return {arcs:a}},
        peg$c4 = ",",
        peg$c5 = { type: "literal", value: ",", description: "\",\"" },
        peg$c6 = function(o) {return o},
        peg$c7 = ";",
        peg$c8 = { type: "literal", value: ";", description: "\";\"" },
        peg$c9 = function(options) {
          return optionArray2Object(options);
        },
        peg$c10 = "=",
        peg$c11 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c12 = function(name, s) {return s},
        peg$c13 = function(name, i) {return i.toString()},
        peg$c14 = function(name, b) {return b.toString()},
        peg$c15 = function(name, value) {
          var lOption = {};
          name = name.toLowerCase();
          if (name === "wordwraparcs"){
            lOption[name] = flattenBoolean(value);
          } else {
            lOption[name]=value;
          }
          return lOption;
        },
        peg$c16 = "hscale",
        peg$c17 = { type: "literal", value: "hscale", description: "\"hscale\"" },
        peg$c18 = "width",
        peg$c19 = { type: "literal", value: "width", description: "\"width\"" },
        peg$c20 = "arcgradient",
        peg$c21 = { type: "literal", value: "arcgradient", description: "\"arcgradient\"" },
        peg$c22 = "wordwraparcs",
        peg$c23 = { type: "literal", value: "wordwraparcs", description: "\"wordwraparcs\"" },
        peg$c24 = "watermark",
        peg$c25 = { type: "literal", value: "watermark", description: "\"watermark\"" },
        peg$c26 = function(e) {return e},
        peg$c27 = function(el) {
          el[0].push(el[1]);
          return el[0];
        },
        peg$c28 = { type: "other", description: "entity" },
        peg$c29 = ":",
        peg$c30 = { type: "literal", value: ":", description: "\":\"" },
        peg$c31 = function(name, l) {return l},
        peg$c32 = function(name, label) {
          var lEntity = {};
          lEntity.name = name;
          if (!!label) {
            lEntity.label = label;
          }
          return lEntity;
        },
        peg$c33 = function(a) {return a},
        peg$c34 = function(a) {return [a]},
        peg$c35 = function(al) {
           al[0].push(al[1][0]);

           return al[0];
        },
        peg$c36 = function(sa) {return sa},
        peg$c37 = function(da) {return da},
        peg$c38 = function(ca) {return ca},
        peg$c39 = function(ra, s) {return s},
        peg$c40 = function(ra, label) {
          if (label) {
            ra.label = label;
          }
          return ra;
        },
        peg$c41 = function(kind) {return {kind:kind}},
        peg$c42 = function(from, kind, to) {return {kind: kind, from:from, to:to}},
        peg$c43 = "*",
        peg$c44 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c45 = function(kind, to) {return {kind:kind, from: "*", to:to}},
        peg$c46 = function(from, kind) {return {kind:kind, from: from, to: "*"}},
        peg$c47 = function(from, kind, to, s) {return s},
        peg$c48 = "{",
        peg$c49 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c50 = "}",
        peg$c51 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c52 = function(from, kind, to, label, arcs) {
            var retval = {kind: kind, from:from, to:to, arcs:arcs};
            if (label) {
              retval.label = label;
            }
            return retval;
          },
        peg$c53 = "|||",
        peg$c54 = { type: "literal", value: "|||", description: "\"|||\"" },
        peg$c55 = "...",
        peg$c56 = { type: "literal", value: "...", description: "\"...\"" },
        peg$c57 = "---",
        peg$c58 = { type: "literal", value: "---", description: "\"---\"" },
        peg$c59 = function(kind) {return kind.toLowerCase()},
        peg$c60 = { type: "other", description: "bi-directional arrow" },
        peg$c61 = "--",
        peg$c62 = { type: "literal", value: "--", description: "\"--\"" },
        peg$c63 = "<->",
        peg$c64 = { type: "literal", value: "<->", description: "\"<->\"" },
        peg$c65 = "==",
        peg$c66 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c67 = "<<=>>",
        peg$c68 = { type: "literal", value: "<<=>>", description: "\"<<=>>\"" },
        peg$c69 = "<=>",
        peg$c70 = { type: "literal", value: "<=>", description: "\"<=>\"" },
        peg$c71 = "..",
        peg$c72 = { type: "literal", value: "..", description: "\"..\"" },
        peg$c73 = "<<>>",
        peg$c74 = { type: "literal", value: "<<>>", description: "\"<<>>\"" },
        peg$c75 = "::",
        peg$c76 = { type: "literal", value: "::", description: "\"::\"" },
        peg$c77 = "<:>",
        peg$c78 = { type: "literal", value: "<:>", description: "\"<:>\"" },
        peg$c79 = { type: "other", description: "left to right arrow" },
        peg$c80 = "->",
        peg$c81 = { type: "literal", value: "->", description: "\"->\"" },
        peg$c82 = "=>>",
        peg$c83 = { type: "literal", value: "=>>", description: "\"=>>\"" },
        peg$c84 = "=>",
        peg$c85 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c86 = ">>",
        peg$c87 = { type: "literal", value: ">>", description: "\">>\"" },
        peg$c88 = ":>",
        peg$c89 = { type: "literal", value: ":>", description: "\":>\"" },
        peg$c90 = "-x",
        peg$c91 = { type: "literal", value: "-x", description: "\"-x\"" },
        peg$c92 = { type: "other", description: "right to left arrow" },
        peg$c93 = "<-",
        peg$c94 = { type: "literal", value: "<-", description: "\"<-\"" },
        peg$c95 = "<<=",
        peg$c96 = { type: "literal", value: "<<=", description: "\"<<=\"" },
        peg$c97 = "<=",
        peg$c98 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c99 = "<<",
        peg$c100 = { type: "literal", value: "<<", description: "\"<<\"" },
        peg$c101 = "<:",
        peg$c102 = { type: "literal", value: "<:", description: "\"<:\"" },
        peg$c103 = "x-",
        peg$c104 = { type: "literal", value: "x-", description: "\"x-\"" },
        peg$c105 = { type: "other", description: "box" },
        peg$c106 = "note",
        peg$c107 = { type: "literal", value: "note", description: "\"note\"" },
        peg$c108 = "abox",
        peg$c109 = { type: "literal", value: "abox", description: "\"abox\"" },
        peg$c110 = "rbox",
        peg$c111 = { type: "literal", value: "rbox", description: "\"rbox\"" },
        peg$c112 = "box",
        peg$c113 = { type: "literal", value: "box", description: "\"box\"" },
        peg$c114 = { type: "other", description: "arc spanning box" },
        peg$c115 = "alt",
        peg$c116 = { type: "literal", value: "alt", description: "\"alt\"" },
        peg$c117 = "else",
        peg$c118 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c119 = "opt",
        peg$c120 = { type: "literal", value: "opt", description: "\"opt\"" },
        peg$c121 = "break",
        peg$c122 = { type: "literal", value: "break", description: "\"break\"" },
        peg$c123 = "par",
        peg$c124 = { type: "literal", value: "par", description: "\"par\"" },
        peg$c125 = "seq",
        peg$c126 = { type: "literal", value: "seq", description: "\"seq\"" },
        peg$c127 = "strict",
        peg$c128 = { type: "literal", value: "strict", description: "\"strict\"" },
        peg$c129 = "neg",
        peg$c130 = { type: "literal", value: "neg", description: "\"neg\"" },
        peg$c131 = "critical",
        peg$c132 = { type: "literal", value: "critical", description: "\"critical\"" },
        peg$c133 = "ignore",
        peg$c134 = { type: "literal", value: "ignore", description: "\"ignore\"" },
        peg$c135 = "consider",
        peg$c136 = { type: "literal", value: "consider", description: "\"consider\"" },
        peg$c137 = "assert",
        peg$c138 = { type: "literal", value: "assert", description: "\"assert\"" },
        peg$c139 = "loop",
        peg$c140 = { type: "literal", value: "loop", description: "\"loop\"" },
        peg$c141 = "ref",
        peg$c142 = { type: "literal", value: "ref", description: "\"ref\"" },
        peg$c143 = "exc",
        peg$c144 = { type: "literal", value: "exc", description: "\"exc\"" },
        peg$c145 = "\"",
        peg$c146 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c147 = function(s) {return s.join("")},
        peg$c148 = "\\\"",
        peg$c149 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c150 = { type: "any", description: "any character" },
        peg$c151 = function(c) {return c},
        peg$c152 = function(s) {return s.join("").trim()},
        peg$c153 = { type: "other", description: "identifier" },
        peg$c154 = /^[^;, "\t\n\r=\-><:{*]/,
        peg$c155 = { type: "class", value: "[^;, \\\"\\t\\n\\r=\\-><:\\{\\*]", description: "[^;, \\\"\\t\\n\\r=\\-><:\\{\\*]" },
        peg$c156 = function(letters) {return letters.join("")},
        peg$c157 = { type: "other", description: "whitespace" },
        peg$c158 = /^[ \t]/,
        peg$c159 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c160 = { type: "other", description: "lineend" },
        peg$c161 = /^[\r\n]/,
        peg$c162 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
        peg$c163 = "/*",
        peg$c164 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c165 = "*/",
        peg$c166 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c167 = function(start, com, end) {
          return start + com.join("") + end
        },
        peg$c168 = "//",
        peg$c169 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c170 = "#",
        peg$c171 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c172 = /^[^\r\n]/,
        peg$c173 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c174 = function(start, com) {
          return start + com.join("")
        },
        peg$c175 = { type: "other", description: "comment" },
        peg$c176 = { type: "other", description: "integer" },
        peg$c177 = /^[0-9]/,
        peg$c178 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c179 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c180 = { type: "other", description: "real" },
        peg$c181 = ".",
        peg$c182 = { type: "literal", value: ".", description: "\".\"" },
        peg$c183 = function(digits) { return parseFloat(digits.join("")); },
        peg$c184 = { type: "other", description: "boolean" },
        peg$c185 = "true",
        peg$c186 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c187 = "false",
        peg$c188 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c189 = "on",
        peg$c190 = { type: "literal", value: "on", description: "\"on\"" },
        peg$c191 = "off",
        peg$c192 = { type: "literal", value: "off", description: "\"off\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseprogram() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsedeclarationlist();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsedeclarationlist() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseoptionlist();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s1;
        s2 = peg$c1(s2);
      }
      s1 = s2;
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseentitylist();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s2;
          s3 = peg$c2(s3);
        }
        s2 = s3;
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parsearclist();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c3(s4);
          }
          s3 = s4;
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseoptionlist() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseoption();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c4;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c6(s4);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseoption();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s5 = peg$c4;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c6(s4);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parseoption();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 59) {
            s5 = peg$c7;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c6(s4);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c9(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseoption() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseoptionname();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 61) {
              s4 = peg$c10;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$currPos;
                s7 = peg$parsequotedstring();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s6;
                  s7 = peg$c12(s2, s7);
                }
                s6 = s7;
                if (s6 === peg$FAILED) {
                  s6 = peg$currPos;
                  s7 = peg$parsenumber();
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s6;
                    s7 = peg$c13(s2, s7);
                  }
                  s6 = s7;
                  if (s6 === peg$FAILED) {
                    s6 = peg$currPos;
                    s7 = peg$parseboolean();
                    if (s7 !== peg$FAILED) {
                      peg$savedPos = s6;
                      s7 = peg$c14(s2, s7);
                    }
                    s6 = s7;
                  }
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c15(s2, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseoptionname() {
      var s0;
